Add initial instrumentation
Signed-off-by: Christophe Bedard <fixed-term.christophe.bourquebedard@de.bosch.com>

--- a/rclcpp/package.xml
+++ b/rclcpp/package.xml
@@ -27,6 +27,7 @@
   <depend>rcl</depend>
   <depend>rcl_yaml_param_parser</depend>
   <depend>rmw_implementation</depend>
+  <depend>tracetools</depend>
 
   <exec_depend>ament_cmake</exec_depend>
 
